<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="handlers" type="com.tripleThreads.taxiyaz.fragments.UserViewModelEventListeners"/>
        <variable name="user" type="com.tripleThreads.taxiyaz.data.user.User"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            tools:context=".fragments.LoginFragment">

        <TextView
                android:text="Register"
                android:id="@+id/register_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_goneMarginBottom="20dp"
                app:layout_constraintTop_toTopOf="@id/horizontal_guideline"
                app:layout_constraintBottom_toTopOf="@+id/user_name"
                android:textSize="40sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <TextView
                android:id="@+id/username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/register_label"
                app:layout_constraintBottom_toTopOf="@id/user_name"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:text="Username"/>

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:hint="enter a username"
                android:elevation="@dimen/cardview_default_radius"
                android:inputType="text"
                android:text="@={user.name}"
                android:background="@drawable/edit_round"
                android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                app:layout_constraintTop_toBottomOf="@+id/username_label"
                android:drawableStart="@drawable/ic_account_circle_black_24dp"/>


        <TextView
                android:id="@+id/phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/user_name"
                app:layout_constraintBottom_toTopOf="@id/phone_number"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:text="Phone number"/>

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/phone_number"
                android:hint="enter phone no"
                android:layout_marginTop="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@={user.phoneNumber}"
                android:elevation="@dimen/cardview_compat_inset_shadow"
                android:background="@drawable/edit_round"
                android:drawableLeft="@drawable/ic_phone_black_24dp"
                android:drawableStart="@drawable/ic_phone_black_24dp"
                app:layout_constraintTop_toBottomOf="@+id/phone_label"
                android:inputType="phone"/>


        <com.google.android.material.button.MaterialButton
                android:text="Register"
                android:enabled="true"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:id="@+id/register_button"
                android:layout_marginTop="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/button_round"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:onClick="@{() -> handlers.onButtonClick(user)}"
                app:layout_constraintTop_toBottomOf="@+id/phone_number"/>

        <androidx.constraintlayout.widget.Guideline
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/horizontal_guideline"
                app:layout_constraintGuide_begin="100dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>