...
            android:layout_height="match_parent"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            tools:context=".fragments.RouteFragment">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_bar"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:imeOptions="actionSearch"
                android:inputType="textPersonName"
                android:hint="@string/search"
...
